--- a/package.json
+++ b/package.json
@@ -32,14 +32,14 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "7.0.2",
-    "@angular/compiler-cli": "7.0.0",
+    "@angular/cli": "^7.3.8",
+    "@angular/compiler-cli": "^7.2.14",
     "@ngtools/webpack": "7.0.2",
     "@types/node": "9.4.7",
     "angular-router-loader": "0.8.5",
     "angular2-template-loader": "0.6.2",
     "autoprefixer": "9.2.0",
-    "browser-sync": "2.26.3",
+    "browser-sync": "^2.26.5",
     "browser-sync-webpack-plugin": "2.2.2",
     "cache-loader": "1.2.2",
     "codelyzer": "4.5.0",
@@ -48,7 +48,7 @@
     "file-loader": "1.1.11",
     "fork-ts-checker-webpack-plugin": "0.4.10",
     "friendly-errors-webpack-plugin": "1.7.0",
-    "generator-jhipster": "5.7.0",
+    "generator-jhipster": "^5.8.2",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
     "merge-jsons-webpack-plugin": "1.0.14",
